content/products/swift/0.5.2/reference/swift_version.md
---
title: Swift Version
menu:
  product_swift_0.5.2:
    identifier: swift-version
    name: Swift Version
    parent: reference
product_name: swift
menu_name: product_swift_0.5.2
section_menu_id: reference
info:
  version: 0.5.2
---

## swift version

Prints binary version number.

### Synopsis


Prints binary version number.

```
swift version [flags]
```

### Options

```
  -h, --help   help for version
```

### Options inherited from parent commands

```
      --alsologtostderr                  log to standard error as well as files
      --analytics                        Send analytical events to Google Analytics (default true)
      --log_backtrace_at traceLocation   when logging hits line file:N, emit a stack trace (default :0)
      --log_dir string                   If non-empty, write log files in this directory
      --logtostderr                      log to standard error instead of files
      --stderrthreshold severity         logs at or above this threshold go to stderr (default 2)
  -v, --v Level                          log level for V logs
      --vmodule moduleSpec               comma-separated list of pattern=N settings for file-filtered logging
```

### SEE ALSO
* [swift](/products/swift/0.5.2/reference/swift)	 - Swift by Appscode - Ajax friendly Helm Tiller Proxy

